# blackcore

./: .env.example  .gitignore  CLAUDE.md  DEDUPE_SUMMARY.md  Dockerfile.streamlit  GUI_SETUP.md  LAUNCH-QUERY-ENGINE-AGENTS.md  README.md  RUN_DEDUPE_WITHOUT_AI.md  SEARCH_API_SUMMARY.md  TEST_RESULTS_REPORT.md  TEST_RESULTS_REPORT_UPDATED.md  TEST_STATUS_SUMMARY.md  architecture.md  ben.html  config.json  data_remediation_summary.md  database_sync.md  demo_deduplication.py  docker-compose.gui.yml  executive-summary-orchestrate-v2.html  pyproject.toml  repomix-output.xml  requirements-dev.txt  requirements-streamlit.txt  requirements.txt  run_dedupe_demo.py  run_enhanced_gui.sh  start_gui.py  streamlit_app.py  sync_config.json  test_analytics_api.py  test_cli_interactive.py  test_cli_no_ai.py  test_dashboard_endpoints.py  test_dedupe_detailed.py  test_gui_app.py  test_search_endpoints.py  tmp1e3wnnjm.txt
.claude/: settings.json
.coordination/: agent_b_progress.md  status.json
.streamlit/: pages.toml
docs/: LIVE_TESTING_GUIDE.md  api-ecosystem-architecture.md  blackcore-investigation-support.md  code-review-work-1752077467-implementation.md  code-review-work-1752077467.md  code-review-work-1752151618.md  code-review-work-1752170005.md  codebase-structure.md  comprehensive-test-suite-implementation.md  dedupe-cli-fixes.md  dedupe_engine_commands.md  dedupe_quick_start.md  expanded-use-cases-spec.md  gemini.md  gemini_v2.md  graphiti-vs-neo4j-for-pm.md  llm-scorer-migration-guide.md  minimal-transcript-processor-prd.md  mvp_readme.md  neo4j-graphiti-analysis.md  readme_databases.md  readme_original.md  recommended-cleanup.md  security-configuration.md  simple-neo4j-alternatives.md  standard-mode-cli-summary.md  streamlit-fastapi-integration-spec.md  streamlit-gui-enhanced.md
logs/: chat.json  notification.json  pre_tool_use.json  stop.json  subagent_stop.json
pages/: advanced_search.py  network_explorer.py  task_board.py  transgression_tracker.py
prompts/: extract.md
scripts/: compare_local_notion.py  create_missing_local_files.py  data_remediation.py  debug_database_loading.py  debug_property_formatting.py  debug_property_preparation.py  dedupe_cli.py  demo_dedupe_cli.py  demo_deduplication.py  demo_llm_deduplication.py  demonstrate_dedupe_cli.py  diagnose_deduplication.py  discover_and_configure.py  export_complete_notion.py  final_production_sync.py  fix_property_formatting.py  fix_remaining_issues.py  generate_master_key.py  ingest_intelligence.py  merge_hook_files.py  merge_notion_to_local.py  notion_sync.py  run_interactive_dedupe.sh  run_neo4j-blackcore.sh  setup_databases.py  sync_config_prod.json  sync_production.py  sync_production_staged.py  test_cli_interactive.py  test_cli_merge.py  test_dedupe_analysis.py  test_dedupe_cli.py  test_dedupe_detailed.py  test_deduplication_system.py  test_full_merge_flow.py  test_low_confidence_review.py  test_merge_fix.py  test_people_deduplication.py  test_single_page_creation.py  test_staged_sync.py  (+4 more)
specs/: analytics-api-tech-spec.md  code-review-minimal-module.md  roadmap.md  (+16 more)
t-minus-phase-2/black-sails-game/emergent-world-py/: README.md  cli.py  main.py  pyproject.toml  quickstart.sh  requirements.txt
t-minus-phase-2/black-sails-game/emergent-world-py/examples/: complex_scenario.py  simple_world.py
t-minus-phase-2/black-sails-game/emergent-world-py/src/: __init__.py
t-minus-phase-2/black-sails-game/emergent-world-py/src/ai/: __init__.py  npc_mind.py
t-minus-phase-2/black-sails-game/emergent-world-py/src/cli/: __init__.py  monitor.py
t-minus-phase-2/black-sails-game/emergent-world-py/src/core/: __init__.py  entity.py  events.py  modifiers.py  relationships.py  resources.py
t-minus-phase-2/black-sails-game/emergent-world-py/src/economy/: __init__.py  market.py
t-minus-phase-2/black-sails-game/emergent-world-py/src/patterns/: __init__.py  detector.py
t-minus-phase-2/black-sails-game/emergent-world-py/src/world/: __init__.py  engine.py
(+513 files in other folders)
