[project]
name = "blackcore"
version = "0.1.0"
description = "Intelligence processing and automation system for Project Nassau"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "notion-client>=2.2.1",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "rich>=14.0.0",
    "cryptography>=41.0.0",
    "structlog>=24.0.0",
    "redis>=5.0.0",
    "dnspython>=2.4.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "anthropic>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
setup-databases = "scripts.setup_databases:main"
verify-databases = "scripts.verify_databases:main"
process-intelligence = "scripts.process_new_intelligence:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
