[project]
name = "emergent-world"
version = "0.1.0"
description = "Minimal primitives for maximum emergence"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "redis>=5.0.0",
    "neo4j>=5.14.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "networkx>=3.2",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "httpx>=0.25.0",
    "anthropic>=0.7.0",
    "openai>=1.3.0",
    "msgpack>=1.0.7",
    "structlog>=23.2.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "watchdog>=3.0.0",
    "sortedcontainers>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "ipython>=8.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "DTZ", "T20", "SIM", "RET"]
ignore = ["E501"]

[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]